# zkauth

./: .dockerignore  Cargo.toml  LICENSE  README.md  codecov.yml  docker-compose.yml
.github/workflows/: ci.yml  coverage.yml  docs.yml  github-pages.yml  lints.yml  tests.yml
dev/: .env.default  eks-down  eks-kubeconfig  eks-up  gen-proto  k8s-deploy  k8s-exec-cli  k8s-exec-client  lint
protobuf/: Cargo.toml  buf.gen.yaml  zkp_auth.proto
tests/: Cargo.toml
tests/src/: e2e.rs  lib.rs
verifier/: Cargo.toml
verifier/src/: main.rs  service.rs
zkauth/: Cargo.toml
zkauth-cli/: Cargo.toml
zkauth-client/: Cargo.toml  Dockerfile
zkauth-client/src/: cli.rs  client.rs  lib.rs  main.rs  prover.rs  test.rs
zkauth-client/tests/: main.rs
zkauth-demo-cli/: Cargo.toml  Dockerfile
zkauth-demo-cli/src/: lib.rs  main.rs
zkauth-demo-cli/tests/: cli.rs
zkauth-pb/: Cargo.toml  buf.gen.yaml  v1.proto
zkauth-pb/scripts/: generate
zkauth-pb/src/: lib.rs
zkauth-proto/: Cargo.toml
zkauth-protobuf/: Cargo.toml
zkauth-protobuf/src/: lib.rs
zkauth-server/: Cargo.toml  Dockerfile
zkauth-server/src/: lib.rs  main.rs  service.rs  verifier.rs
zkauth-server/src/cli/: config.rs  mod.rs  options.rs  run.rs
zkauth-server/src/store/: memory.rs  mod.rs
zkauth-server/tests/: cli.rs  main.rs
zkauth-tests/: Cargo.toml
zkauth-tests/src/: e2e.rs
zkauth/src/: lib.rs
zkauth/src/discrete_logarithm/: README.md  configuration.rs  mod.rs  operations.rs  prover.rs  test.rs  verifier.rs
zkauth/src/elliptic_curve/: README.md  configuration.rs  mod.rs  operations.rs  prover.rs  test.rs  verifier.rs
zkpauthctl/: Cargo.toml
zkpauthctl/src/: main.rs  prover.rs
zkpauthd/: Cargo.toml
zkpauthd/src/: lib.rs  main.rs  parameters.rs  service.rs  verifier.rs
zkpauthpb/: Cargo.toml  buf.gen.yaml  buf.yaml  v1.proto
zkpauthpb/scripts/: generate
