[workspace]

members = [
    "zkauth-protobuf",
    "zkauth-client",
    "zkauth-server",
    "zkauth-demo-cli",
    "tests",
    "zkauth",
]

exclude = []

# Make the feature resolver explicit.
# See https://doc.rust-lang.org/edition-guide/rust-2021/default-cargo-resolver.html#details
resolver = "2"
