[package]
name = "zkauth-client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkauth-protobuf = { path = "../zkauth-protobuf", features = ["full"] }
zkauth = { path = "../zkauth" }
anyhow = "1.0.80"
log = "0.4.21"
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.18"
rand = "0.8.5"
tokio = { version = "1.36.0", features = ["full"] }
tokio-stream = "0.1.14"
tonic = "0.11.0"
curve25519-dalek = { version = "4.1.2", features = ["digest", "rand_core"] }

[dev-dependencies]
tower = "0.4.13"
