[package]
name = "zkauth-demo-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkauth-client = { path = "../zkauth-client" }
anyhow = "1.0.80"
clap = { version = "4.5.1", features = ["env", "derive"] }
clap-verbosity-flag = "2.2.0"
env_logger = "0.11.2"
tokio = { version = "1.36.0", features = ["full"] }
