[package]
name = "zkauth-protobuf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pbjson = "0.6.0"
prost = "0.12.3"
serde = "1.0.197"
tonic = "0.11.0"
zkauth = { path = "../zkauth" }

[features]
default = ["zkauth-v1"]
full = ["zkauth-v1"]
"zkauth-v1" = []
