[package]
name = "zkauth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
zkauth-pb = { path = "../zkauth-pb", features = ["full"] }
tonic = "0.11.0"
clap = { version = "4.5.1", features = ["env", "derive"] }
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.2"
tokio-stream = { version = "0.1.14", features = ["full"] }
clap-verbosity-flag = "2.2.0"
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
dashmap = "5.5.3"
num-traits = "0.2.18"
moka = { version = "0.12.5", features = ["future", "sync"] }
num-primes = "0.3.0"

[dev-dependencies]
assert_cmd = "2.0.14"
wait-timeout = "0.2.0"
