[package]
name = "zkauth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
zkauth-protobuf = { path = "../zkauth-protobuf", features = ["full"] }
zkauth = { path = "../zkauth" }
tonic = "0.11.0"
clap = { version = "4.5.1", features = ["env", "derive"] }
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.2"
tokio-stream = { version = "0.1.14", features = ["full"] }
clap-verbosity-flag = "2.2.0"
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
dashmap = "5.5.3"
num-traits = "0.2.18"
moka = { version = "0.12.5", features = ["future", "sync"] }
num-primes = "0.3.0"
futures-util = "0.3.30"
curve25519-dalek = { version = "4.1.2", features = ["digest"] }
sha2 = "0.10.8"
base64 = "0.22.0"
bytes = "1.5.0"
hex = "0.4.3"
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["serde_derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"

[dev-dependencies]
assert_cmd = "2.0.14"
wait-timeout = "0.2.0"
