[package]
name = "zkauth-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zkauth-protobuf = { path = "../zkauth-protobuf", features = ["full"] }
zkauth = { path = "../zkauth" }
tokio = { version = "1.36.0", features = ["full"] }
tonic = "0.11.0"
clap = { version = "4.5.1", features = ["env", "derive"] }
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.2"
tokio-stream = { version = "0.1.14", features = ["full"] }
clap-verbosity-flag = "2.2.0"
num-bigint = { version = "0.4.4", features = ["rand", "serde"] }
rand = "0.8.5"
uuid = { version = "1.7.0", features = ["v4", "fast-rng"] }
dashmap = "5.5.3"
num-traits = "0.2.18"
moka = { version = "0.12.5", features = ["future", "sync"] }
futures-util = "0.3.30"
curve25519-dalek = { version = "4.1.2", features = ["digest"] }
serde_json = "1.0.114"
serde = { version = "1.0.197", features = ["serde_derive"] }
strum = "0.26.1"
strum_macros = "0.26.1"

[dev-dependencies]
assert_cmd = "2.0.14"
tempdir = "0.3.7"
wait-timeout = "0.2.0"
