[package]
name = "zkauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
curve25519-dalek = { version = "4.1.2", features = ["digest", "rand_core"] }
num-bigint = { version = "0.4.4", features = ["rand"] }
num-traits = "0.2.18"
primal = "0.3.2"
rand = "0.8.5"
sha2 = "0.10.8"
