[package]
name = "zkpauthd"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenvy = "0.15.7"
tokio = { version = "1.36.0", features = ["full"] }
zkpauthpb = { path = "../zkpauthpb" }
tonic = "0.11.0"
clap = { version = "4.5.1", features = ["env", "derive"] }
anyhow = "1.0.80"
log = "0.4.21"
env_logger = "0.11.2"
tokio-stream = { version = "0.1.14", features = ["full"] }
